Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n",
+      "5.0\n",
+      "Calculating Manhattan Distance:\n",
+      "7.0\n",
+      "Calcuating Minkowski Distance (c=3):\n",
+      "4.497941445275415\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Complete this function! \n",
-    "def distance():\n",
-    "    pass\n",
+    "def distance(a, b, c=2, verbose=True):\n",
+    "    if len(a) != len(b):\n",
+    "        raise ValueError(\"Both vectors must be of equal length!\")\n",
+    "    \n",
+    "    root = 1 / c\n",
+    "    running_total = 0\n",
+    "    \n",
+    "    if verbose:\n",
+    "        if c == 1:\n",
+    "            print(\"Calculating Manhattan Distance:\")\n",
+    "        elif c == 2:\n",
+    "            print('Calculating Euclidean Distance:')\n",
+    "        else:\n",
+    "            print(\"Calcuating Minkowski Distance (c={}):\".format(c))\n",
+    "    \n",
+    "    for ind, val_a in enumerate(a):\n",
+    "        val_b = b[ind]\n",
+    "        running_total += np.power(np.abs(val_a - val_b), c)\n",
+    "    \n",
+    "    return np.power(running_total, root)\n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
