Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n",
+      "17.939899665271266\n"
+     ]
+    }
+   ],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "print(distance((-2, -3.4, 4, 15, 7), (3, -1.2, -2, -1, 7)))"
    ]
   },
   {
